# Mako

./: CMakeLists.txt  README.md
docs/: language_specifications.md
src/: codegen.cpp  codegen.h  lexer  lexer.cpp  lexer.h  main  main.cpp  parser.cpp  parser.h  test.txt
